course details page overlapping issue fixed

--- a/app/assets/styles/modules/_academicProgram.scss
+++ b/app/assets/styles/modules/_academicProgram.scss
@@ -36,7 +36,7 @@
 
 	.academic-bg-wrap {		
 
-		@include atSize700 {
+		@include atSize424 {
 			margin-top: 30px;
 			position: relative;
     top: 120px;
